# niri-scratchpad

./: .gitignore  Cargo.toml  README.md  flake.nix
niri-ipc/: Cargo.toml
niri-ipc/src/: lib.rs
src/: args.rs  daemon.rs  main.rs  scratchpad_action.rs  state.rs
src/ipc/: ipc.rs  mod.rs  structs.rs
src/state/: mod.rs  state.rs
