[package]
name = "niri-ipc"
version = "25.11.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/YaLTeR/niri"

description = "Types and helpers for interfacing with the niri Wayland compositor."
keywords = ["wayland"]
categories = ["api-bindings", "os"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.48", features = ["derive"], optional = true }
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
clap = ["dep:clap"]
json-schema = ["dep:schemars"]
